--- a/rl1.ipynb
+++ b/rl1.ipynb
@@ -824,7 +824,7 @@
     "El ECM es una medida de la calidad de un modelo de predicción; cuanto menor sea el ECM, mejor será la precisión del modelo.\n",
     " el ECM, mejor será la precisión del modelo.\n",
     "\n",
-    "#### Los parametros pára estimar\n",
+    "#### Los parametros para estimar\n",
     "$ \\hat{y}_i = \\hat{w}* x_i + \\hat{b} $\n",
     "\n",
     "**Los parametros para estimar**\n",
